# TextMatrixEvolver

./: CMakeLists.txt  README.md  evaluation.c  evaluation.h  main.c  population.c  population.h  recombination.c  recombination.h  selection.c  selection.h  settings.c  settings.h
tests/: population.c
